# reviro_fastapi_testapp

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: def9b15201f2_create_test_db_and_hist_tables.py
api/: Task.py  TaskHistory.py  auth.py  routers.py
db/: database.py  models.py  schemas.py  types.py
db/utils/: time_utils.py
tests/: conftest.py
tests/test_routes/: test_task_and_history_crud.py
