[project]
name = "fast-api-app-last"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.1",
    "fastapi-filter>=2.0.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standart]>=0.115.12",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "python-decouple>=3.8",
    "ruff>=0.11.12",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn[standart]>=0.34.2",
]
